infra/headlamp-ingress.yaml
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: headlamp
  namespace: headlamp
spec:
  rules:
    - host: dashboard.35.237.234.228.nip.io
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: headlamp
                port:
                  number: 80
  ingressClassName: contour
